--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,9 @@ name: Create and publish a Docker image
 
 on:
   workflow_dispatch:
-  # push:
+  push:
+    branches:
+    - main
 
 env:
   REGISTRY: ghcr.io
