support repo-scoped runners
Signed-off-by: CollinM <collinmcneese@github.com>

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,4 +1,6 @@
 GHRUNNER_ORGANIZATION=''
+# Optionally specify a Repository
+# GHRUNNER_REPOSITORY=''
 GHRUNNER_ACCESS_TOKEN=''
 GHRUNNER_LABELS="self-hosted,Linux,x64,dependabot"
 # Specify the base GitHub URL if not using github.com
