--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,8 +6,8 @@ on:
     branches:
     - main
     paths:
-    - './VERSION'
-    - './docker/*'
+    - VERSION
+    - 'docker/**'
 
 env:
   REGISTRY: ghcr.io
