updates for workflows
Signed-off-by: Collin McNeese <collinmcneese@github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Output Collector
         id: output-collector
-        uses: collinmcneese/file-output-collector@build
+        uses: collinmcneese/file-output-collector@main
         with:
           file: "./VERSION"
 
