--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Output Collector
         id: output-collector
-        uses: collinmcneese/file-output-collector@build
+        uses: collinmcneese/file-output-collector@main
         with:
           file: "./VERSION"
       - name: Prep
