--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Test Docker Build
 on:
   workflow_dispatch:
   pull_request:
-  # push:
+    types: [opened, synchronize, reopened, labeled]
 
 env:
   REGISTRY: ghcr.io
