--- a/actions-runner-controller/Dockerfile
+++ b/actions-runner-controller/Dockerfile
@@ -10,10 +10,8 @@ RUN \
     : "${RUNNER_VERSION:?Build argument RUNNER_VERSION needs to be set and non-empty.}"
 
 # Add a non-priviledged user
-ARG RUNNER_USER_UID=1001
-ARG DOCKER_GROUP_GID=121
 RUN groupadd docker -g 121 \
-    && useradd docker -u 1001 -g 121
+    && useradd -m docker -u 1001 -g 121
 
 # Install dependencies
 RUN apt update \
