arc-container-dind
Signed-off-by: Collin McNeese <collinmcneese@github.com>

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ jobs:
   build-and-push-image:
     strategy:
       matrix:
-        path: [docker, actions-runner-controller]
+        path: [docker, actions-runner-controller, arc-container-dind]
     environment: publish
     runs-on: ubuntu-latest
 
