ci updates for attestation
Signed-off-by: Collin McNeese <collinmcneese@github.com>

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,12 +80,13 @@ jobs:
         uses: actions/attest-build-provenance@v1
         if: ${{ matrix.path == 'docker' }}
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.output-collector.outputs.output }}
           subject-digest: ${{ steps.build-docker.outputs.digest }}
           push-to-registry: true
 
       - name: Build and Push Docker image for ${{ matrix.path }}
         if: ${{ matrix.path == 'actions-runner-controller' }}
+        id: build-actions-runner-controller
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
         with:
           context: ./actions-runner-controller
@@ -101,12 +102,13 @@ jobs:
         uses: actions/attest-build-provenance@v1
         if: ${{ matrix.path == 'actions-runner-controller' }}
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc
-          subject-digest: ${{ steps.build-docker.outputs.digest }}
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc:${{ steps.output-collector.outputs.output }}
+          subject-digest: ${{ steps.build-actions-runner-controller.outputs.digest }}
           push-to-registry: true
 
       - name: Build and Push Docker image for ${{ matrix.path }}
         if: ${{ matrix.path == 'arc-container-dind' }}
+        id: build-arc-container-dind
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
         with:
           context: ./arc-container-dind
@@ -122,6 +124,6 @@ jobs:
         uses: actions/attest-build-provenance@v1
         if: ${{ matrix.path == 'arc-container-dind' }}
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc-container-dind
-          subject-digest: ${{ steps.build-docker.outputs.digest }}
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc-container-dind:${{ steps.output-collector.outputs.output }}
+          subject-digest: ${{ steps.build-arc-container-dind.outputs.digest }}
           push-to-registry: true
