--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
   build-image:
     strategy:
       matrix:
-        path: [docker, actions-runner-controller, arc-container-dind]
+        path: [docker]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -82,48 +82,4 @@ jobs:
         with:
           subject-name: "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.output-collector.outputs.output }}"
           subject-digest: "${{ steps.build-docker.outputs.digest }}"
-          push-to-registry: false
-
-      - name: Build Docker image for ${{ matrix.path }}
-        if: ${{ matrix.path == 'actions-runner-controller' }}
-        id: build-actions-runner-controller
-        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
-        with:
-          context: ./actions-runner-controller
-          push: false
-          labels: ${{ steps.meta-arc.outputs.labels }}
-          build-args: |
-            RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc:${{ steps.output-collector.outputs.output }}
-
-      - name: docker - Build Attestation
-        uses: actions/attest-build-provenance@v1
-        if: ${{ matrix.path == 'actions-runner-controller' }}
-        with:
-          subject-name: "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc:${{ steps.output-collector.outputs.output }}"
-          subject-digest: "${{ steps.build-actions-runner-controller.outputs.digest }}"
-          push-to-registry: false
-
-      - name: Build and Push Docker image for ${{ matrix.path }}
-        if: ${{ matrix.path == 'arc-container-dind' }}
-        id: build-arc-container-dind
-        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
-        with:
-          context: ./arc-container-dind
-          push: false
-          labels: ${{ steps.meta-arc.outputs.labels }}
-          build-args: |
-            RUNNER_VERSION=${{ steps.output-collector.outputs.output }}
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc-container-dind:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc-container-dind:${{ steps.output-collector.outputs.output }}
-
-      - name: arc-container-dind - Attest build provenance
-        uses: actions/attest-build-provenance@v1
-        if: ${{ matrix.path == 'arc-container-dind' }}
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-arc-container-dind:${{ steps.output-collector.outputs.output }}
-          subject-digest: ${{ steps.build-arc-container-dind.outputs.digest }}
           push-to-registry: false
