--- a/actions-runner/Dockerfile
+++ b/actions-runner/Dockerfile
@@ -1,12 +1,21 @@
+# based on actions/runner
+
 # Source: https://github.com/dotnet/dotnet-docker
 FROM mcr.microsoft.com/dotnet/runtime-deps:6.0-jammy as build
 
-ARG TARGETOS=linux
-ARG TARGETARCH=arm64
-ARG RUNNER_VERSION=2.315.0
-ARG RUNNER_CONTAINER_HOOKS_VERSION=0.6.0
-ARG DOCKER_VERSION=25.0.4
-ARG BUILDX_VERSION=0.13.1
+# ARG TARGETOS=linux
+# ARG TARGETARCH=arm64
+# ARG RUNNER_VERSION=2.315.0
+# ARG RUNNER_CONTAINER_HOOKS_VERSION=0.6.0
+# ARG DOCKER_VERSION=25.0.4
+# ARG BUILDX_VERSION=0.13.1
+
+ARG TARGETOS
+ARG TARGETARCH
+ARG RUNNER_VERSION
+ARG RUNNER_CONTAINER_HOOKS_VERSION
+ARG DOCKER_VERSION
+ARG BUILDX_VERSION
 
 RUN apt update -y && apt install curl unzip -y
 
